# amazon-chime-sma-on-demand-recording

./: .gitignore  .projenrc.js  README.md  cdk.json  checkNumber.sh  deploy.sh  package.json
.github/workflows/: codeql-analysis.yml
.projen/: deps.json  tasks.json
lib/: amazon-chime-sma-recording-stack.ts
resources/smaHandler/: smaHandler.py
src/: amazon-chime-sma-on-demand-recording.ts  chime.ts  infrastructure.ts  parameters.ts
src/createChimeResources/: createChimeResources.py
src/createOutput/: Dockerfile  app.py  requirements.txt
src/resources/smaHandler/: smaHandler.py
src/smaHandler/: smaHandler.py
src/transcribe/: pyproject.toml  transcribe.py
src/triggerStateMachine/: trigger.py
test/: main.test.ts
test/__snapshots__/: main.test.ts.snap
utils/createWav/: README.md  createWav.py  pyproject.toml
