[tool.poetry]
name = "transcribe"
version = "0.1.0"
description = ""
authors = ["Court Schuett <schuettc@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.18.64"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
